# ALICE-Train

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  paperspace_exec.py
configs/: qat_1b.json  qat_3b.json  qat_70b.json  qat_70b_code.json  qat_70b_creative.json  qat_70b_finance.json  qat_70b_general.json  qat_70b_infra.json  qat_70b_japanese.json  qat_70b_legal.json  qat_70b_math.json  qat_70b_medical.json  qat_70b_robotics.json  qat_70b_security.json  qat_70b_spatial.json  qat_8b_8layer.json  qat_8b_debug.json  qat_8b_full.json  qat_8b_general.json  qat_8b_streaming.json  qat_phase1_test.json  qat_qwen35_9b.json  qat_qwen35_9b_a100_safe.json  qat_qwen35_9b_micro.json  qat_qwen35_9b_sanity.json  qat_qwen35_9b_v7.json  qat_qwen35_micro.json  qat_qwen35_phase1_test.json  qat_qwen_1.5b.json  qat_qwen_1.5b_v2.json  qat_qwen_7b.json
docs/: QAT_TRAINING_LOG.md
scripts/: auto_resume.sh  create_pod.py  create_runpod_qat.py  download_models.sh  export_ternary.sh  monitor.sh  prepare_real_data.py  quick_test.py  run_qat_multi.sh  run_qat_runpod.sh  runpod_qat.sh  setup_paperspace.sh  setup_runpod.sh  test_qat_model.py  train_domain.sh  tts_generate.py  tts_pipeline.sh  tts_upload_box.sh  upload_box.sh
shaders/: ternary_backward.wgsl
src/: activation.rs  backward.rs  blas.rs  checkpoint.rs  cuda_matmul.rs  dataloader.rs  deltanet.rs  distill.rs  evaluator.rs  export.rs  fast_math.rs  fp32_cache.rs  gpu.rs  gpu_backward.rs  gpu_matmul.rs  inference.rs  lib.rs  llama.rs  llama_backward.rs  llama_forward.rs  logger.rs  mixed_precision.rs  offload.rs  pipeline.rs  pth_loader.rs  qat.rs  qwen35.rs  qwen35_backward.rs  qwen35_forward.rs  safetensors_loader.rs  scheduler.rs  tokenizer.rs  trainer.rs  vision.rs
